--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Countdown Timer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="app/static/css/style.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
